--- a/influxdb.conf
+++ b/influxdb.conf
@@ -12,7 +12,7 @@ bind-address = "127.0.0.1:8088"
   wal-dir = "/var/lib/influxdb/wal"
   wal-fsync-delay = "0s"
   validate-keys = false
-  query-log-enabled = true
+  query-log-enabled = false
   cache-max-memory-size = 1073741824
   cache-snapshot-memory-size = 26214400
   cache-snapshot-write-cold-duration = "10m0s"
@@ -62,7 +62,7 @@ bind-address = "127.0.0.1:8088"
   enabled = true
   bind-address = ":8086"
   auth-enabled = false
-  log-enabled = true
+  log-enabled = false
   suppress-write-log = false
   write-tracing = false
   flux-enabled = true
@@ -144,7 +144,7 @@ bind-address = "127.0.0.1:8088"
   precision = ""
 
 [continuous_queries]
-  log-enabled = true
+  log-enabled = false
   enabled = true
   query-stats-enabled = false
   run-interval = "1s"
