Disable pypowerwall debug logging by default

--- a/powerwall.yml
+++ b/powerwall.yml
@@ -33,7 +33,7 @@ services:
             PW_EMAIL: "email@example.com"
             PW_HOST: "192.168.91.1"
             PW_TIMEZONE: "America/Los_Angeles"
-            PW_DEBUG: "yes"
+            PW_DEBUG: "no"
 
     telegraf:
         image: telegraf:latest
