Fix setup with default env

--- a/pypowerwall.env
+++ b/pypowerwall.env
@@ -1,4 +1,4 @@
-PW_PASSWORD: "password"
+PW_PASSWORD: "changeme"
 PW_EMAIL: "email@example.com"
 PW_HOST: "192.168.91.1"
 PW_TIMEZONE: "America/Los_Angeles"
