--- a/pypowerwall.sample
+++ b/pypowerwall.sample
@@ -1,5 +1,5 @@
-PW_PASSWORD: "password"
-PW_EMAIL: "email@example.com"
-PW_HOST: "192.168.91.1"
-PW_TIMEZONE: "America/Los_Angeles"
-PW_DEBUG: "no"
+PW_EMAIL=email@example.com
+PW_PASSWORD=password
+PW_HOST=10.0.1.2
+PW_TIMEZONE=America/Los_Angeles
+PW_DEBUG=no
