--- a/powerwall.yml
+++ b/powerwall.yml
@@ -60,12 +60,7 @@ services:
               published: 9000
               mode: host
         environment:
-            GF_PATHS_PROVISIONING: /var/lib/grafana/provisions
-            GF_SERVER_HTTP_PORT: 9000
-            GF_INSTALL_PLUGINS: "grafana-piechart-panel, natel-plotly-panel, blackmirror1-singlestat-math-panel, btplc-trend-box-panel, marcuscalidus-svg-panel, michaeldmoore-multistat-panel, yesoreyeram-boomtable-panel, ryantxu-ajax-panel, grafana-influxdb-flux-datasource, fetzerch-sunandmoon-datasource, andig-darksky-datasource, simpod-json-datasource"
-            GF_ANALYTICS_CHECK_FOR_UPDATES: "false"
-            GF_ANALYTICS_REPORTING_ENABLED: "false"
-            GF_PANELS_DISABLE_SANITIZE_HTML: "true"
+            - grafana.env
         depends_on:
             - influxdb
 
