Poll for alerts data #158

--- a/telegraf.conf
+++ b/telegraf.conf
@@ -122,6 +122,17 @@
 	date_format = "2006"
 	timezone = "America/Los_Angeles"
 
+# Alert Data
+[[inputs.http]]
+        urls = [
+                "http://pypowerwall:8675/alerts/pw"
+        ]
+        name_override = "alerts"
+        method = "GET"
+        insecure_skip_verify = true
+        timeout = "4s"
+        data_format = "json"
+
 # Configuration for sending metrics to InfluxDB
 #[[outputs.influxdb]]
   ## The full HTTP or UDP URL for your InfluxDB instance.
