Move alerts data into INF retention policy

--- a/telegraf.conf
+++ b/telegraf.conf
@@ -92,11 +92,21 @@
 #                            OUTPUT PLUGINS                                   #
 ###############################################################################
 
+# Retention policy: raw
 [[outputs.influxdb]]
 	urls = ["http://influxdb:8086"]
 	database = "powerwall"
 	skip_database_creation = false
 	retention_policy = "raw"
+  namedrop = ["alerts"]
+
+# Retention policy: alerts
+[[outputs.influxdb]]
+	urls = ["http://influxdb:8086"]
+	database = "powerwall"
+	skip_database_creation = false
+	retention_policy = "alerts"
+  namepass = ["alerts"]
 
 [[inputs.http]]
 	urls = [
@@ -105,7 +115,7 @@
 		"http://pypowerwall:8675/strings",
 		"http://pypowerwall:8675/temps/pw",
 		"http://pypowerwall:8675/freq",
-    "http://pypowerwall:8675/pod"
+		"http://pypowerwall:8675/pod"
 	]
 	method = "GET"
 	insecure_skip_verify = true
