Upgrade InfluxDB Client #195

--- a/weather/Dockerfile
+++ b/weather/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.8-alpine
 WORKDIR /app
-RUN pip3 install influxdb
+RUN pip3 install influxdb-client
 COPY server.py server.py
 COPY README.md README.md
 CMD ["python3", "server.py"]
