--- a/weather/weather411.conf.sample
+++ b/weather/weather411.conf.sample
@@ -24,7 +24,10 @@ HOST = influxdb
 PORT = 8086
 DB = powerwall
 FIELD = weather
-# Leave blank if not used
-USERNAME = 
+# Auth - Leave blank if not used
+USERNAME =
 PASSWORD =
+# Auth - Influx 2.x - Leave blank if not used
+TOKEN =
+ORG =
 
