InfluxDB 2.0 Library Support

--- a/weather/contrib/ecowitt/ecowitt.conf.sample
+++ b/weather/contrib/ecowitt/ecowitt.conf.sample
@@ -4,7 +4,8 @@ DEBUG = no
 [API]
 # Port to listen on for requests (default 8686)
 ENABLE = yes
-PORT = 8686 # Different Port to Weather 411 so they can co-exist
+# Different Port to Weather 411 so they can co-exist
+PORT = 8686
 
 [Ecowitt]
 # Set your APIKEY and APPLICATION_KEY from https://www.ecowitt.net/user/index
@@ -34,3 +35,4 @@ PASSWORD =
 TOKEN =
 ORG =
 URL =
+
