--- a/grafana.env.sample
+++ b/grafana.env.sample
@@ -5,6 +5,9 @@ GF_ANALYTICS_CHECK_FOR_UPDATES=false
 GF_ANALYTICS_REPORTING_ENABLED=false
 GF_PANELS_DISABLE_SANITIZE_HTML=true
 
+# This allows grafana dashboards to be embedded in other webpages
+GF_SECURITY_ALLOW_EMBEDDING=true
+
 # Uncomment and configure for mail relay for alert notifications
 #GF_SMTP_ENABLED=true
 #GF_SMTP_HOST=smtp-mail.outlook.com:587
