--- a/grafana.env.sample
+++ b/grafana.env.sample
@@ -8,6 +8,13 @@ GF_PANELS_DISABLE_SANITIZE_HTML=true
 # This allows grafana dashboards to be embedded in other webpages
 GF_SECURITY_ALLOW_EMBEDDING=true
 
+# Uncomment lines below to disable login requirement
+#GF_AUTH_DISABLE_LOGIN_FORM=true
+#GF_AUTH_ANONYMOUS_ENABLED=true
+#GF_AUTH_ANONYMOUS_ORG_NAME=Main Org.
+#GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
+#GF_USERS_ALLOW_SIGN_UP=false
+
 # Uncomment and configure for mail relay for alert notifications
 #GF_SMTP_ENABLED=true
 #GF_SMTP_HOST=smtp-mail.outlook.com:587
