Add read-only no login option #130

--- a/grafana.env.sample
+++ b/grafana.env.sample
@@ -8,12 +8,18 @@ GF_PANELS_DISABLE_SANITIZE_HTML=true
 # This allows grafana dashboards to be embedded in other webpages
 GF_SECURITY_ALLOW_EMBEDDING=true
 
-# Uncomment lines below to disable login requirement
+# Uncomment lines below to disable login requirement (full access)
 #GF_AUTH_DISABLE_LOGIN_FORM=true
 #GF_AUTH_ANONYMOUS_ENABLED=true
 #GF_AUTH_ANONYMOUS_ORG_NAME=Main Org.
 #GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
 #GF_USERS_ALLOW_SIGN_UP=false
+
+# Uncomment to make dashboards public without edit ability (read-only)
+#GF_FEATURE_TOGGLES_PUBLICDASHBOARDS=true
+#GF_AUTH_ANONYMOUS_ENABLED=true
+#GF_AUTH_ANONYMOUS_ORG_NAME=Main Org.
+#GF_AUTH_ANONYMOUS_ORG_ROLE=Viewer
 
 # Uncomment and configure for mail relay for alert notifications
 #GF_SMTP_ENABLED=true
