--- a/grafana.env.sample
+++ b/grafana.env.sample
@@ -1,6 +1,6 @@
 GF_PATHS_PROVISIONING=/var/lib/grafana/provisions
 GF_SERVER_HTTP_PORT=9000
-GF_INSTALL_PLUGINS=grafana-piechart-panel, natel-plotly-panel, blackmirror1-singlestat-math-panel, btplc-trend-box-panel, marcuscalidus-svg-panel, michaeldmoore-multistat-panel, https://github.com/yesoreyeram/yesoreyeram-boomtable-panel/releases/download/v1.5.0-alpha.3/yesoreyeram-boomtable-panel-1.5.0-alpha.3.zip;yesoreyeram-boomtable-panel, ryantxu-ajax-panel, grafana-influxdb-flux-datasource, fetzerch-sunandmoon-datasource, andig-darksky-datasource, simpod-json-datasource
+GF_INSTALL_PLUGINS=grafana-piechart-panel, https://github.com/yesoreyeram/yesoreyeram-boomtable-panel/releases/download/v1.5.0-alpha.3/yesoreyeram-boomtable-panel-1.5.0-alpha.3.zip;yesoreyeram-boomtable-panel, grafana-influxdb-flux-datasource, fetzerch-sunandmoon-datasource, simpod-json-datasource
 GF_ANALYTICS_CHECK_FOR_UPDATES=false
 GF_ANALYTICS_REPORTING_ENABLED=false
 GF_PANELS_DISABLE_SANITIZE_HTML=true
