Proxy everything behind nginx
There are some situations where you want to access all your services on a single http port.

--- a/grafana.env.sample
+++ b/grafana.env.sample
@@ -32,3 +32,8 @@ GF_SECURITY_ALLOW_EMBEDDING=true
 #GF_SERVER_PROTOCOL=https
 #GF_SERVER_CERT_FILE=/var/lib/grafana/cert.pem
 #GF_SERVER_CERT_KEY=/var/lib/grafana/key.pem
+
+# Serve Grafana from /grafana/
+GF_SERVER_ROOT_URL="%(protocol)s://%(domain)s:%(http_port)s/grafana/"
+GF_SERVER_SERVE_FROM_SUB_PATH=true
+
