Update tesla-history with retry handling on errors

--- a/tools/solar-only/tesla-history/Dockerfile
+++ b/tools/solar-only/tesla-history/Dockerfile
@@ -1,5 +1,7 @@
 FROM python:3.11-alpine
 WORKDIR /app
-RUN pip3 install python-dateutil teslapy influxdb
+RUN apk add build-base \
+  && pip install python-dateutil teslapy influxdb \
+  && apk del build-base
 COPY tesla-history.py tesla-history.py
 CMD ["python3", "tesla-history.py", "--daemon"]
