Update docker compose config for solar-only

--- a/tools/solar-only/compose.env.sample
+++ b/tools/solar-only/compose.env.sample
@@ -4,3 +4,21 @@
 # See issue #22,
 # https://github.com/jasonacox/Powerwall-Dashboard/issues/22#issuecomment-1253076441
 GRAFANAUSER="1000:1000"
+
+#------------------------------------------------------------------------------#
+# Powerwall-Dashboard user and group (uid:gid)
+#------------------------------------------------------------------------------#
+# User and group dashboard was installed under and containers will run as
+# (uncomment and modify if permission issues occur due to non-default uid/gid).
+#
+#PWD_USER="1000:1000"
+
+#------------------------------------------------------------------------------#
+# Container ports to use (uncomment and modify only if custom ports required)
+#------------------------------------------------------------------------------#
+# Accepts a colon-separated string to set the host IP, host port, and
+# container port in the form [[IP:]HOST_PORT:]CONTAINER_PORT[/PROTOCOL]
+#
+#INFLUXDB_PORTS="8086:8086"
+#GRAFANA_PORTS="9000:9000"
+#WEATHER411_PORTS="8676:8676"
