Add container port option usage example

--- a/tools/solar-only/compose.env.sample
+++ b/tools/solar-only/compose.env.sample
@@ -19,6 +19,9 @@ GRAFANAUSER="1000:1000"
 # Accepts a colon-separated string to set the host IP, host port, and
 # container port in the form [[IP:]HOST_PORT:]CONTAINER_PORT[/PROTOCOL]
 #
+# Use 127.0.0.1 (or ::1 for IPV6) to prevent services from being exposed
+# outside of your local machine - e.g. INFLUXDB_PORTS="127.0.0.1:8086:8086"
+#
 #INFLUXDB_PORTS="8086:8086"
 #GRAFANA_PORTS="9000:9000"
 #WEATHER411_PORTS="8676:8676"
