--- a/compose.env.sample
+++ b/compose.env.sample
@@ -1,6 +1,26 @@
 # Environment variables for docker compose.
 #
-# GRAFANAUSER - may need to be adjusted for cases such as rootless docker.
-# See issue #22,
+#------------------------------------------------------------------------------#
+# Powerwall-Dashboard user and group (uid:gid)
+#------------------------------------------------------------------------------#
+# User and group dashboard was installed under and containers will run as
+# (uncomment and modify if permission issues occur due to non-default uid/gid).
+#
+# e.g. may need to be adjusted for cases such as rootless docker, see issue #22
 # https://github.com/jasonacox/Powerwall-Dashboard/issues/22#issuecomment-1253076441
-GRAFANAUSER="1000:1000"
+#
+#PWD_USER="1000:1000"
+
+#------------------------------------------------------------------------------#
+# Container ports to use (uncomment and modify only if custom ports required)
+#------------------------------------------------------------------------------#
+# Accepts a colon-separated string to set the host IP, host port, and
+# container port in the form [[IP:]HOST_PORT:]CONTAINER_PORT[/PROTOCOL]
+#
+# Use 127.0.0.1 (or ::1 for IPV6) to prevent services from being exposed
+# outside of your local machine - e.g. INFLUXDB_PORTS="127.0.0.1:8086:8086"
+#
+#INFLUXDB_PORTS="8086:8086"
+#GRAFANA_PORTS="9000:9000"
+#PYPOWERWALL_PORTS="8675:8675"
+#WEATHER411_PORTS="8676:8676"
