Add profiles support to docker compose and scripts

--- a/compose.env.sample
+++ b/compose.env.sample
@@ -4,7 +4,7 @@
 # Powerwall-Dashboard user and group (uid:gid)
 #------------------------------------------------------------------------------#
 # User and group dashboard was installed under and containers will run as
-# (uncomment and modify if permission issues occur due to non-default uid/gid).
+# (uncomment and modify if permission issues occur due to non-default uid/gid)
 #
 # e.g. may need to be adjusted for cases such as rootless docker, see issue #22
 # https://github.com/jasonacox/Powerwall-Dashboard/issues/22#issuecomment-1253076441
@@ -24,3 +24,12 @@
 #GRAFANA_PORTS="9000:9000"
 #PYPOWERWALL_PORTS="8675:8675"
 #WEATHER411_PORTS="8676:8676"
+
+#------------------------------------------------------------------------------#
+# Powerwall-Dashboard setup profile (default or solar-only, + optional profiles)
+#------------------------------------------------------------------------------#
+# Comma-separated list of profiles to enable
+# - must include either default or solar-only
+# - can include optional profiles, e.g. weather411
+#
+#COMPOSE_PROFILES=default,weather411
