--- a/powerwall.yml
+++ b/powerwall.yml
@@ -27,6 +27,8 @@ services:
             - "${PYPOWERWALL_PORTS:-8675:8675}"
         env_file:
             - pypowerwall.env
+        profiles:
+            - default
 
     telegraf:
         image: telegraf:1.28.2
@@ -53,6 +55,8 @@ services:
         depends_on:
             - influxdb
             - pypowerwall
+        profiles:
+            - default
 
     grafana:
         image: grafana/grafana:9.1.2-ubuntu
@@ -88,3 +92,25 @@ services:
             - WEATHERCONF=/var/lib/weather/weather411.conf
         depends_on:
             - influxdb
+        profiles:
+            - weather411
+
+    tesla-history:
+        image: jasonacox/tesla-history:0.1.4
+        container_name: tesla-history
+        hostname: tesla-history
+        restart: unless-stopped
+        user: "${PWD_USER:-1000:1000}"
+        volumes:
+            - type: bind
+              source: ./tools/tesla-history
+              target: /var/lib/tesla-history
+        environment:
+            - INFLUX_HOST=influxdb
+            - INFLUX_PORT=8086
+            - TESLA_CONF=/var/lib/tesla-history/tesla-history.conf
+            - TESLA_AUTH=/var/lib/tesla-history/tesla-history.auth
+        depends_on:
+            - influxdb
+        profiles:
+            - solar-only
