--- a/influxdb.conf
+++ b/influxdb.conf
@@ -46,7 +46,7 @@ bind-address = "127.0.0.1:8088"
   advance-period = "30m0s"
 
 [monitor]
-  store-enabled = true
+  store-enabled = false
   store-database = "_internal"
   store-interval = "10s"
 
