--- a/powerwall.yml
+++ b/powerwall.yml
@@ -16,6 +16,8 @@ services:
               target: /var/lib/influxdb
         ports:
             - "${INFLUXDB_PORTS:-8086:8086}"
+        env_file:
+            - influxdb.env
 
     pypowerwall:
         image: jasonacox/pypowerwall:0.6.4t32
