--- a/powerwall.yml
+++ b/powerwall.yml
@@ -20,10 +20,17 @@ services:
             - influxdb.env
 
     pypowerwall:
-        image: jasonacox/pypowerwall:0.6.4t32
+        image: jasonacox/pypowerwall:0.7.0t33
         container_name: pypowerwall
         hostname: pypowerwall
         restart: unless-stopped
+        volumes:
+            - type: bind
+              source: ./.pypowerwall.auth
+              target: /app/.pypowerwall.auth
+            - type: bind
+              source: ./.pypowerwall.site
+              target: /app/.pypowerwall.site
         user: "${PWD_USER:-1000:1000}"
         ports:
             - "${PYPOWERWALL_PORTS:-8675:8675}"
