--- a/powerwall-v1.yml
+++ b/powerwall-v1.yml
@@ -20,10 +20,14 @@ services:
             - influxdb.env
 
     pypowerwall:
-        image: jasonacox/pypowerwall:0.6.4t32
+        image: jasonacox/pypowerwall:0.7.2t36
         container_name: pypowerwall
         hostname: pypowerwall
         restart: unless-stopped
+        volumes:
+            - type: bind
+              source: .auth
+              target: /app/.auth
         user: "${PWD_USER:-1000:1000}"
         ports:
             - "${PYPOWERWALL_PORTS:-8675:8675}"
