--- a/grafana.env.sample
+++ b/grafana.env.sample
@@ -1,17 +1,7 @@
+# Updated v4.1.1
 GF_PATHS_PROVISIONING=/var/lib/grafana/provisions
 GF_SERVER_HTTP_PORT=9000
-
-# Core plugins required by Powerwall-Dashboard are managed in PWD_CORE_PLUGINS. 
-# WARNING: Please do not edit or redefine this variable later in this file. 
-# update.sh relies on only one appearance of this variable, and changes my break
-# the update script.
-# To add your own custom plugins, modify GF_INSTALL_PLUGINS.
-PWD_CORE_PLUGINS=grafana-piechart-panel, https://github.com/yesoreyeram/yesoreyeram-boomtable-panel/releases/download/v1.5.0-alpha.3/yesoreyeram-boomtable-panel-1.5.0-alpha.3.zip;yesoreyeram-boomtable-panel, fetzerch-sunandmoon-datasource, simpod-json-datasource
-
-# Add your customs plugins to the end of GF_INSTALL_PLUGINS (comma-space separated!).
-# Please do not remove ${PWD_CORE_PLUGINS}, as this will break the dashboard.
-GF_INSTALL_PLUGINS=${PWD_CORE_PLUGINS}
-
+GF_INSTALL_PLUGINS=grafana-piechart-panel, https://github.com/yesoreyeram/yesoreyeram-boomtable-panel/releases/download/v1.5.0-alpha.3/yesoreyeram-boomtable-panel-1.5.0-alpha.3.zip;yesoreyeram-boomtable-panel, fetzerch-sunandmoon-datasource, simpod-json-datasource
 GF_ANALYTICS_CHECK_FOR_UPDATES=false
 GF_ANALYTICS_REPORTING_ENABLED=false
 GF_PANELS_DISABLE_SANITIZE_HTML=true
