Add TZ to example

--- a/pypowerwall.env.sample
+++ b/pypowerwall.env.sample
@@ -2,5 +2,6 @@ PW_EMAIL=email@example.com
 PW_PASSWORD=password
 PW_HOST=10.0.1.2
 PW_TIMEZONE=America/Los_Angeles
+TZ=America/Los_Angeles
 PW_DEBUG=no
 PW_STYLE=grafana-dark
