--- a/grafana.env.sample
+++ b/grafana.env.sample
@@ -1,5 +1,5 @@
 # Updated v4.1.1
-#GF_PATHS_PROVISIONING=/var/lib/grafana/provisions
+GF_PATHS_PROVISIONING=/var/lib/grafana/provisions
 GF_SERVER_HTTP_PORT=9000
 GF_INSTALL_PLUGINS=grafana-piechart-panel, https://github.com/yesoreyeram/yesoreyeram-boomtable-panel/releases/download/v1.5.0-alpha.3/yesoreyeram-boomtable-panel-1.5.0-alpha.3.zip;yesoreyeram-boomtable-panel, fetzerch-sunandmoon-datasource, simpod-json-datasource
 GF_ANALYTICS_CHECK_FOR_UPDATES=false
