--- a/grafana/provisions/datasources/influxdb.yml
+++ b/grafana/provisions/datasources/influxdb.yml
@@ -1,11 +1,10 @@
 apiVersion: 1
 
 datasources:
-  - name: InfluxDB
+  - name: InfluxDB (auto provisioned)
     type: influxdb
     access: proxy
     url: http://influxdb:8086
-    isDefault: true
     database: powerwall
     jsonData:
       dbName: powerwall
