--- a/grafana/sunandmoon.yml
+++ b/grafana/sunandmoon.yml
@@ -1,7 +1,7 @@
 apiVersion: 1
 
 datasources:
-  - name: Sun and Moon
+  - name: Sun and Moon (auto provisioned)
     type: fetzerch-sunandmoon-datasource
     jsonData: 
       latitude: zzLAT 
