--- a/k3s/pypowerwallservice.yaml
+++ b/k3s/pypowerwallservice.yaml
@@ -1,13 +1,22 @@
 apiVersion: v1
 kind: Service
 metadata:
-    name: pypowerwall
-    namespace: powerwall
+  name: pypowerwall
+  namespace: powerwall
 spec:
-    ports:
-      - name: pypowerwall
-        port: 8675
-        targetPort: 8675
-    selector:
-        app: pypowerwall
-    type: NodePort
+  selector:
+    app: pypowerwall
+  allocateLoadBalancerNodePorts: true
+  externalTrafficPolicy: Local
+  internalTrafficPolicy: Cluster
+  ipFamilies:
+  - IPv4
+  ipFamilyPolicy: SingleStack
+  loadBalancerIP: 192.168.2.89
+  ports:
+  - port: 8675
+    protocol: TCP
+    targetPort: 8675
+    name: pypowerwall
+  sessionAffinity: None
+  type: LoadBalancer
