--- a/pypowerwall.env.sample
+++ b/pypowerwall.env.sample
@@ -1,7 +1,18 @@
+# Configuration Settings for pyPowerwall
+
+# Powerwall Settings
 PW_EMAIL=email@example.com
 PW_PASSWORD=password
 PW_HOST=10.0.1.2
 PW_TIMEZONE=America/Los_Angeles
 TZ=America/Los_Angeles
-PW_DEBUG=no
+
+# Powerwall WiFi Gateway Password for TEDAPI Access Mode
+PW_GW_PWD=
+
+# Custom Settings
+PW_DEBUG=no             # yes/no - Debug logging
 PW_STYLE=grafana-dark
+PW_NEG_SOLAR=yes        # Set to no to zero out negative solar values
+
+# Additional Settings Here
