--- a/telegraf.conf
+++ b/telegraf.conf
@@ -133,6 +133,11 @@
 	timeout = "4s"
 	data_format = "json"
 
+[[inputs.exec]]
+  commands = ["/etc/telegraf/ver.sh"]
+  name_override = "powerwall_dashboard"
+  data_format = "influx"  
+
 # Configuration for sending metrics to InfluxDB
 #[[outputs.influxdb]]
   ## The full HTTP or UDP URL for your InfluxDB instance.
