Dual Inverter Prototype

--- a/powerwall.yml
+++ b/powerwall.yml
@@ -4,6 +4,7 @@ services:
         container_name: influxdb
         hostname: influxdb
         restart: unless-stopped
+        network_mode: host
         volumes:
             - type: bind
               source: ./influxdb.conf
@@ -12,13 +13,11 @@ services:
             - type: bind
               source: ./influxdb
               target: /var/lib/influxdb
-        ports:
-            - "${INFLUXDB_PORTS:-8086:8086}"
         env_file:
             - influxdb.env
 
     pypowerwall:
-        image: jasonacox/pypowerwall:0.12.0t66
+        image: jasonacox/pypowerwall:0.12.3.t68
         container_name: pypowerwall
         hostname: pypowerwall
         restart: unless-stopped
@@ -27,10 +26,10 @@ services:
               source: .auth
               target: /app/.auth
         user: "${PWD_USER:-1000:1000}"
-        ports:
-            - "${PYPOWERWALL_PORTS:-8675:8675}"
+        network_mode: host
         environment:
-            - PW_AUTH_PATH=.auth
+            - PW_AUTH_PATH_1=.auth
+            - PW_AUTH_PATH_2=.auth
         env_file:
             - pypowerwall.env
 
@@ -40,6 +39,7 @@ services:
         hostname: telegraf
         restart: unless-stopped
         user: "${PWD_USER:-1000:1000}"
+        network_mode: host
         command: [
             "telegraf",
             "--config",
@@ -74,12 +74,11 @@ services:
         hostname: grafana
         restart: unless-stopped
         user: "${PWD_USER:-1000:1000}"
+        network_mode: host
         volumes:
             - type: bind
               source: ./grafana
               target: /var/lib/grafana
-        ports:
-            - "${GRAFANA_PORTS:-9000:9000}"
         env_file:
             - grafana.env
         depends_on:
@@ -91,13 +90,12 @@ services:
         hostname: weather411
         restart: unless-stopped
         user: "${PWD_USER:-1000:1000}"
+        network_mode: host
         volumes:
             - type: bind
               source: ./weather
               target: /var/lib/weather
               read_only: true
-        ports:
-            - "${WEATHER411_PORTS:-8676:8676}"
         environment:
             - WEATHERCONF=/var/lib/weather/weather411.conf
         depends_on:
