--- a/telegraf.conf
+++ b/telegraf.conf
@@ -93,19 +93,25 @@
 ###############################################################################
 
 [[outputs.influxdb]]
-	urls = ["http://influxdb:8086"]
+	urls = ["http://localhost:8086"]
 	database = "powerwall"
 	skip_database_creation = false
 	retention_policy = "raw"
 
 [[inputs.http]]
 	urls = [
-		"http://pypowerwall:8675/aggregates",
-		"http://pypowerwall:8675/soe",
-		"http://pypowerwall:8675/strings",
-		"http://pypowerwall:8675/temps/pw",
-		"http://pypowerwall:8675/freq",
-		"http://pypowerwall:8675/pod"
+		"http://localhost:8675/aggregates",
+		"http://localhost:8675/soe",
+		"http://localhost:8675/strings",
+		"http://localhost:8675/temps/pw",
+		"http://localhost:8675/freq",
+		"http://localhost:8675/pod",
+		"http://localhost:8685/aggregates",
+		"http://localhost:8685/soe",
+		"http://localhost:8685/strings",
+		"http://localhost:8685/temps/pw",
+		"http://localhost:8685/freq",
+		"http://localhost:8685/pod"
 	]
 	method = "GET"
 	insecure_skip_verify = true
@@ -115,17 +121,18 @@
 [[processors.date]]
 	tag_key = "month"
 	date_format = "Jan"
-	timezone = "America/Los_Angeles"
+	timezone = "America/New_York"
 
 [[processors.date]]
 	tag_key = "year"
 	date_format = "2006"
-	timezone = "America/Los_Angeles"
+	timezone = "America/New_York"
 
 # Alert Data
 [[inputs.http]]
 	urls = [
-		"http://pypowerwall:8675/alerts/pw"
+		"http://localhost:8675/alerts/pw",
+		"http://localhost:8685/alerts/pw"
 	]
 	name_override = "alerts"
 	method = "GET"
