--- a/grafana/provisions/datasources/influxdb.yml
+++ b/grafana/provisions/datasources/influxdb.yml
@@ -4,7 +4,7 @@ datasources:
   - name: InfluxDB (auto provisioned)
     type: influxdb
     access: proxy
-    url: http://influxdb:8086
+    url: http://localhost:8086
     database: powerwall
     jsonData:
       dbName: powerwall
