--- a/grafana/sunandmoon-template.yml
+++ b/grafana/sunandmoon-template.yml
@@ -3,6 +3,7 @@ apiVersion: 1
 datasources:
   - name: Sun and Moon (auto provisioned)
     type: fetzerch-sunandmoon-datasource
-    jsonData: 
-      latitude: zzLAT 
+    uid: sunandmoon
+    jsonData:
+      latitude: zzLAT
       longitude: zzLONG
