Enhance log display options in verify.sh #680

--- a/pypowerwall.env.sample
+++ b/pypowerwall.env.sample
@@ -15,4 +15,17 @@ PW_DEBUG=no             # yes/no - Debug logging
 PW_STYLE=grafana-dark
 PW_NEG_SOLAR=yes        # Set to no to zero out negative solar values
 
+# Optional Network Settings
+#PW_CACHE_EXPIRE=20                   # How long to cache data
+#PW_TIMEOUT=10                        # How long to wait for PW or Cloud to respond
+#PW_POOL_MAXSIZE=15                   # How many concurrent connections to PW
+
+# Optional Network Reliability Settings
+#PW_SUPPRESS_NETWORK_ERRORS=no        # Suppress network error logs
+#PW_NETWORK_ERROR_RATE_LIMIT=5        # Error log rate limit
+#PW_FAIL_FAST=no                      # Fast fail on bad connection
+#PW_GRACEFUL_DEGRADATION=yes          # Use cached data if needed
+#PW_HEALTH_CHECK=yes                  # Enable health checks
+#PW_CACHE_TTL=30                      # Max cache age (seconds)
+
 # Additional Settings Here
